--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,8 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
