--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,11 @@
 
 a {
   text-decoration: inherit;
-  transition: color .3s ease;
+  transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #99a1afc2;
+  color: gray;
 }
 
 header::before {
@@ -30,7 +30,7 @@ header::before {
 body {
   margin: 0;
   display: flex;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -56,6 +56,64 @@ button {
   transition: border-color 0.25s;
 }
 
-button:hover {
-  border-color: #646cff;
+scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+scrollbar-thumb {
+  background-color: #111111;
+  border-radius: 10px;
+}
+
+scrollbar-track {
+  background-color: #f0f0f0;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: linear-gradient(to bottom, #111111, white);
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  background: linear-gradient(to right, #111111, white);
+}
+
+
+::-webkit-scrollbar-track {
+  width: 8px;
+  height: 8px;
+}
+
+.swiper-horizontal>.swiper-scrollbar,
+.swiper-scrollbar.swiper-scrollbar-horizontal {
+  display: none !important;
+}
+
+.accordion-btn[aria-expanded="true"] .accordion__icon {
+  transform: rotate(180deg);
+}
+
+.accordion-panel {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+}
+
+.accordion-btn[aria-expanded="true"]~.accordion-panel {
+  max-height: 500px;
+}
+
+.vk-logo::before {
+  content: '';
+  background-color: white;
 }
