--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
+.primary-btn {
+  @apply !transition-colors bg-[#1A1A1A] hover:bg-gray-600 w-full text-white py-3 px-6 rounded-4xl mt-2;
+}
+
 #root {
   margin: 0 auto;
   width: 100%;
