--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  // min-height: 100vh;
   text-align: center;
   display: flex;
   flex-direction: column;
