--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   font-weight: 400;
   font-style: normal;
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: rgb(199, 199, 199);
   color: #111111;
 }
@@ -143,3 +143,82 @@ scrollbar-track {
 .Toastify__toast {
   margin-top: 75px;
 } */
+
+.flatpickr-calendar,
+.flatpickr-months .flatpickr-month,
+span.flatpickr-weekday,
+.flatpickr-monthDropdown-months,
+.flatpickr-monthDropdown-month {
+  background-color: #111111 !important;
+  text-align: center !important;
+}
+
+.flatpickr-calendar {
+  margin-top: 4px !important;
+}
+
+
+
+.flatpickr-months .flatpickr-prev-month:hover svg,
+.flatpickr-months .flatpickr-next-month:hover svg {
+  fill: #fff !important;
+}
+
+.flatpickr-months .flatpickr-prev-month:hover,
+.flatpickr-months .flatpickr-next-month:hover {
+  background-color: rgba(192, 187, 167, 0.1) !important;
+}
+
+.flatpickr-monthDropdown-month {
+  background: #000 !important;
+}
+
+.arrowUp,
+.arrowDown {
+  border: 1px solid transparent !important;
+  padding: 2px !important;
+}
+
+.flatpickr-day.selected,
+.flatpickr-day.startRange,
+.flatpickr-day.endRange,
+.flatpickr-day.selected.inRange,
+.flatpickr-day.startRange.inRange,
+.flatpickr-day.endRange.inRange,
+.flatpickr-day.selected:focus,
+.flatpickr-day.startRange:focus,
+.flatpickr-day.endRange:focus,
+.flatpickr-day.selected:hover,
+.flatpickr-day.startRange:hover,
+.flatpickr-day.endRange:hover,
+.flatpickr-day.selected.prevMonthDay,
+.flatpickr-day.startRange.prevMonthDay,
+.flatpickr-day.endRange.prevMonthDay,
+.flatpickr-day.selected.nextMonthDay,
+.flatpickr-day.startRange.nextMonthDay,
+.flatpickr-day.endRange.nextMonthDay {
+  background: white !important;
+  color: #000 !important;
+  border-color: transparent !important;
+}
+
+.flatpickr-day.inRange,
+.flatpickr-day.prevMonthDay.inRange,
+.flatpickr-day.nextMonthDay.inRange,
+.flatpickr-day.today.inRange,
+.flatpickr-day.prevMonthDay.today.inRange,
+.flatpickr-day.nextMonthDay.today.inRange,
+.flatpickr-day:hover,
+.flatpickr-day.prevMonthDay:hover,
+.flatpickr-day.nextMonthDay:hover,
+.flatpickr-day:focus,
+.flatpickr-day.prevMonthDay:focus,
+.flatpickr-day.nextMonthDay:focus {
+  background-color: #888888 !important;
+  border-color: #888888 !important;
+}
+
+.flatpickr-day.today:hover,
+.flatpickr-day.today:focus {
+  color: white !important;
+}
