--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
   font-style: normal;
   min-width: 320px;
   /* min-height: 100vh; */
-  flex-direction: column;
+  /* flex-direction: column; */
   background-color: rgb(199, 199, 199);
   color: #111111;
 }
