--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,16 @@ body {
   height: 100%;
 }
 
+#root {
+  margin: 0 auto;
+  width: 100% !important;
+  height: 100% !important;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+
 a {
   text-decoration: inherit;
   transition: color 0.3s ease;
