--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 }
 
 .calendar-styles {
-  @apply w-full text-center cursor-pointer p-2 placeholder:!text-gray-900 outline-0 !border-0 !border-b-1 border-transparent border-b-[#111111];
+  @apply w-full text-left sm:text-center cursor-pointer p-0 pb-2 sm:p-2 placeholder:!text-gray-900 outline-0 !border-0 !border-b-1 border-transparent border-b-[#111111];
 }
 
 .options-styles {
