--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .calendar-styles {
-  @apply w-full text-left sm:text-center cursor-pointer p-0 pb-2 sm:p-2 outline-0 border-0 border-b;
+  @apply w-full text-left sm:text-center cursor-pointer p-2 outline-0 border-0 border-b;
 }
 
 .options-styles {
