--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 @import '../css/colors.css';
 @import '../css/utilities.css';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -41,6 +41,7 @@
 .board-card:hover {
   transform: translateY(-10px);
 }
+
 /* 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
