добавил капчу + отвязку тгшки

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,10 @@
 
 html {
   background-color: var(--main-bg);
-  scrollbar-gutter: stable;
+  /* scrollbar-gutter: stable; */
   scroll-behavior: smooth;
+  /* overflow: auto !important; */
+  /* padding-right: 6px !important; */
 }
 
 html,
@@ -41,7 +43,6 @@ img {
   user-select: none;
   pointer-events: none;
   display: none;
-
 }
 
 img[src] {
@@ -111,8 +112,8 @@ select:-webkit-autofill:focus {
   border-bottom: 1px solid var(--main-input-border-focus) !important;
 }
 
-input.peer:not(:placeholder-shown)+label,
-input.peer:focus+label {
+input.peer:not(:placeholder-shown) + label,
+input.peer:focus + label {
   top: 0;
   font-size: 0.75rem;
   color: var(--main-primary);
@@ -135,7 +136,7 @@ input.peer:focus+label {
   background-color: var(--main-primary-hover);
 }
 
-.swiper-horizontal>.swiper-scrollbar,
+.swiper-horizontal > .swiper-scrollbar,
 .swiper-scrollbar.swiper-scrollbar-horizontal {
   display: none !important;
 }
@@ -150,7 +151,7 @@ input.peer:focus+label {
   transition: max-height 0.3s ease;
 }
 
-.accordion-btn[aria-expanded='true']~.accordion-panel {
+.accordion-btn[aria-expanded='true'] ~ .accordion-panel {
   max-height: 500px;
 }
 
@@ -258,9 +259,9 @@ span.flatpickr-weekday,
   border-radius: 30px !important;
 }
 
-.flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n + 1)),
-.flatpickr-day.startRange.startRange+.endRange:not(:nth-child(7n + 1)),
-.flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n + 1)) {
+.flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n + 1)),
+.flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n + 1)),
+.flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n + 1)) {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
@@ -358,27 +359,27 @@ span.flatpickr-weekday,
   align-items: center;
 }
 
-.tiptap-content ul[data-type='taskList'] li>label {
+.tiptap-content ul[data-type='taskList'] li > label {
   margin-right: 0.5rem;
   user-select: none;
 }
 
-.tiptap-content ul[data-type='taskList'] li>div {
+.tiptap-content ul[data-type='taskList'] li > div {
   flex-grow: 1;
 }
 
-.tiptap-content ul[data-type='taskList'] li[data-checked='true']>div>p {
+.tiptap-content ul[data-type='taskList'] li[data-checked='true'] > div > p {
   text-decoration: line-through;
   color: #8b949e;
 }
 
-.tiptap-content ul[data-type='taskList'] li>label,
+.tiptap-content ul[data-type='taskList'] li > label,
 .tiptap-content ul[data-type='taskList'] li input[type='checkbox'] {
   pointer-events: none;
   opacity: 0.75;
 }
 
-.tiptap .tiptap-content ul[data-type='taskList'] li>label,
+.tiptap .tiptap-content ul[data-type='taskList'] li > label,
 .tiptap .tiptap-content ul[data-type='taskList'] li input[type='checkbox'] {
   pointer-events: auto;
   cursor: pointer;
@@ -459,10 +460,12 @@ footer a:hover {
   left: -150%;
   height: 100%;
   width: 150%;
-  background: linear-gradient(90deg,
-      rgba(37, 99, 235, 0) 0%,
-      rgba(255, 255, 255, 0.4) 50%,
-      rgba(37, 99, 235, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(37, 99, 235, 0) 0%,
+    rgba(255, 255, 255, 0.4) 50%,
+    rgba(37, 99, 235, 0) 100%
+  );
   pointer-events: none;
   z-index: 1;
   animation: shimmerMove 1.5s infinite;
