подправил баги и обновил профиль

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,8 @@ img {
   user-select: none;
   pointer-events: none;
   display: none;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 img[src] {
