--- a/css/colors.css
+++ b/css/colors.css
@@ -1,7 +1,21 @@
-:root {
+:root,
+[data-theme='dark'] {
   transition:
     background-color 0.3s ease,
-    color 0.3s ease;
+    color 0.3s ease,
+    border-color 0.3s ease,
+    box-shadow 0.3s ease,
+    fill 0.3s ease,
+    stroke 0.3s ease;
+}
+
+/* @media (prefers-reduced-motion: reduce) {
+  * {
+    transition: none !important;
+  }
+} */
+
+:root {
   /* === Основа === */
   --main-bg: #f5f7fa;
   --main-surface: #ffffff;
@@ -67,9 +81,6 @@
 
 /* ====== ТЕМНАЯ ТЕМА ====== */
 [data-theme='dark'] {
-  transition:
-    background-color 0.3s ease,
-    color 0.3s ease;
   /* === Основа === */
   --main-bg: #1e293b;
   --main-surface: #273449;
